Spring Boot4.x対応でOpenRewriteレシピかけて、コンパイルエラー回避。AP起動はしない。